# thomaz

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY.md
.github/workflows/: api.yml  build.yml  pages.yml  release.yml  symbolicate.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/archive/hardening/: REQUIREMENTS.md  research-PITFALLS.md  research-STACK.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ota-update-apply-fails.md
.planning/milestones/: v0.5.0-REQUIREMENTS.md  v0.5.0-ROADMAP.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-privileged-extraction-spike/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/01-remove-community-feature/: 01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-REVIEW.md
.planning/phases/02-api-security-regression-tests/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md
.planning/phases/02-full-extraction-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md
.planning/phases/03-c-platform-hardening/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/03-theme-ui-integration/: 03-01-PLAN.md  03-03-PLAN.md  03-CONTEXT.md  03-PATTERNS.md  03-RESEARCH.md
.planning/phases/04-c-activity-hardening/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  EXTRACTION.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: .env.example  .swcrc  README.md  docker-compose.yml  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
api/prisma/: schema.prisma
api/scripts/: deploy.sh
api/src/: app.ts  config.ts  index.ts
api/test/: api.test.ts  sources.test.ts
docs/: gamebanana-overrides.md  title-takeover.md
lib/hactool/: CMakeLists.txt  README.md
lib/hactool/source/: aes.c  hactool_recover.c  hactool_recover.h  nca.c  settings.h
lib/mbedtls/: CMakeLists.txt  README.md  thomaz_cmac_config.h
lib/switchthemes/: Common.cpp  Common.hpp  NXTheme.cpp  NXTheme.hpp  Patcher.cpp  Patcher.hpp  README.md  apply_facade.cpp  apply_facade.hpp
resources/theme-patches/: PROVENANCE.txt
scripts/: build-desktop.sh  build-switch.sh  run-desktop.sh
source/: home_activity.hpp  main.cpp
source/app/: animated_box.cpp  animated_box.hpp  app_header.cpp  app_header.hpp  auth_activity.cpp  auth_activity.hpp  boot_activity.cpp  boot_activity.hpp  catalog_activity.cpp  catalog_activity.hpp  catalog_detail_activity.cpp  catalog_detail_activity.hpp  cheat_detail_activity.cpp  cheat_detail_activity.hpp  clear_cheats_activity.cpp  clear_cheats_activity.hpp  composer_activity.cpp  composer_activity.hpp  feed_activity.cpp  feed_activity.hpp  game_list_activity.cpp  game_list_activity.hpp  game_panel.cpp  game_panel.hpp  home_activity.cpp  home_activity.hpp  image_viewer_activity.cpp  image_viewer_activity.hpp  mod_browser_activity.cpp  mod_browser_activity.hpp  mod_detail_activity.cpp  mod_detail_activity.hpp  mod_manager_activity.cpp  mod_manager_activity.hpp  save_detail_activity.cpp  save_detail_activity.hpp  save_manager_activity.cpp  save_manager_activity.hpp  settings_activity.cpp  settings_activity.hpp  (+16 more)
source/core/: async_guard.hpp  backup_store.cpp  backup_store.hpp  build_id.cpp  build_id.hpp  cheat.hpp  cheat_db.cpp  cheat_db.hpp  cheat_repository.cpp  cheat_repository.hpp  cheat_txt.cpp  cheat_txt.hpp  db_paths.cpp  db_paths.hpp  storage_format.cpp  storage_format.hpp  title_filter.cpp  title_filter.hpp  update.cpp  update.hpp
source/platform/: app_settings.cpp  app_settings.hpp  atmosphere_config.cpp  atmosphere_config.hpp  auth_client.hpp  cheat_store.cpp  cheat_store.hpp  curl_tls.hpp  fake_auth_client.cpp  fake_auth_client.hpp  fs_util.cpp  fs_util.hpp  game_stats.cpp  game_stats.hpp  http_auth_client.cpp  http_auth_client.hpp  http_client.hpp  http_client_curl.cpp  http_client_curl.hpp  image_transcode.cpp  image_transcode.hpp  save_service.hpp  save_service_fake.cpp  save_service_fake.hpp  save_service_switch.cpp  save_service_switch.hpp  self_update.cpp  self_update.hpp  system_status.cpp  system_status.hpp  title.hpp  title_service_fake.cpp  title_service_fake.hpp  title_service_switch.cpp  title_service_switch.hpp  title_visibility_store.cpp  title_visibility_store.hpp  tls_policy.hpp
tests/: Makefile  test_active_theme_store.cpp  test_api_base_url.cpp  test_async_guard.cpp  test_backup_store.cpp  test_build_id.cpp  test_catalog.cpp  test_catalog_view.cpp  test_cfw_paths.cpp  test_cheat_db.cpp  test_cheat_repository.cpp  test_cheat_txt.cpp  test_cloud_save_json.cpp  test_core_smoke.cpp  test_db_paths.cpp  test_fake_cloud_save_client.cpp  test_feed_json.cpp  test_feed_pagination.cpp  test_fs_util.cpp  test_gamebanana_json.cpp  test_gamebanana_overrides.cpp  test_gamebanana_urls.cpp  test_http_cloud_save_client.cpp  test_http_feed_client.cpp  test_index_fetcher.cpp  test_index_parse.cpp  test_mod_browse.cpp  test_mod_install.cpp  test_mod_paths.cpp  test_mod_store.cpp  test_recurse_plan.cpp  test_save_backup_io.cpp  test_save_package.cpp  test_save_sync.cpp  test_save_sync_state.cpp  test_session_codec.cpp  test_smoke.cpp  test_source_link.cpp  test_source_store.cpp  test_storage_format.cpp  (+13 more)
tests/fixtures/: tinfoil_index_sample.json
website/: 404.html  index.html
website/css/: style.css
website/en/: index.html
(+326 files in other folders)
